Fixed image tags making pages unreadable on mobile.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -210,6 +210,10 @@ code {
     text-wrap: wrap;
 }
 
+img {
+    max-width: 100%;
+}
+
 @media (max-width: 811px) {
     .post-card {
         flex-direction: column;
